--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "postcss-rtlcss-extra",
   "private": false,
-  "version": "0.0.2",
+  "version": "0.0.3",
   "type": "module",
   "files": [
     "dist",
@@ -9,7 +9,7 @@
   ],
   "main": "./dist/postcss-rtlcss-extra.umd.cjs",
   "module": "./dist/postcss-rtlcss-extra.js",
-  "types": "./src/types.ts",
+  "types": "./index.d.ts",
   "exports": {
     "types": "./index.d.ts",
     "import": "./dist/postcss-rtlcss-extra.js",
