--- a/package.json
+++ b/package.json
@@ -1,13 +1,26 @@
 {
   "name": "postcss-rtlcss-extra",
   "private": false,
-  "version": "0.0.9",
-  "type": "module",
+  "version": "0.1.0",
+  "type": "commonjs",
+  "author": {
+    "name": "Amin Mokhtari",
+    "email": "aminmokhtari94@gmail.com",
+    "url": "https://rahkarsatat.ir"
+  },
+  "scripts": {
+    "build": "tsc"
+  },
   "files": [
-    "src"
+    "/dist"
   ],
-  "main": "./src/main.ts",
+  "main": "./dist/main.js",
+  "types": "./dist/types.d.ts",
   "dependencies": {
-    "postcss-rtlcss": "^5.1.2"
+    "postcss-rtlcss": "^5.4.0"
+  },
+  "devDependencies": {
+    "@types/node": "^22.5.4",
+    "typescript": "^5.6.2"
   }
 }
